service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myplants-svc
  namespace: myplants # <-- ADD THIS
spec:
  selector:
    app: myplants-app
  ports:
    - port: 80
      targetPort: 80
