ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myplants-ingress
  namespace: myplants
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myplants.rakdev.online
      secretName: myplants-secret
  rules:
    - host: myplants.rakdev.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myplants-svc
                port:
                  number: 80
